--- a/style.css
+++ b/style.css
@@ -16,38 +16,52 @@ background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox
   padding-top: 30px;
   padding-bottom: 20px;
 }
-h4 {
-  font-size: 16px;
-  font-family: "arial";
-  text-aling: left;
-  margin: 100px;
-  margin-top: 60px;
-  margin-bottom: 1px;
-  padding: 300px;
-  padding-top: 1px;
-  padding-bottom: 1px
-}
-p {  
-  margin: 90px;
-  margin-top: 20px;
-  margin-bottom: 1px;
-  color: #000000;
-}
-ul {
-  padding: 20px;
-  border-radius: 100px;
+img {
   margin: 10px;
-  color: #f8f5f0;
+  padding: 10px;
+}
+div h1 {
+  font-size: 22px;
+  color: #FFFFFF;
+  background-color: #A0522D;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 5px;
+}
+h2 {
+  font-family:'futura';
+  padding-top:40px;
+  margin: 20px;
+  margin-left: 90px;
+  text-align: left;
+}
+h4 {
+  color: #8B4513;
+  font-family:'arial';
+  text-align: left;
+  margin:30px auto;
+  max-width: 500px; 
+}
+
+ol {
+  text-align: left;
+  margin: 130px;
+  margin-bottom: 50px;
+  margin-top: 10px;
+  padding: 20px;
+  padding-left: 50px;
+  list-style: disc;
+  background-color: #d9e5b5;
+  border-radius: 20px;
 }
 li {
-  margin: 50px
+  margin-bottom: 10px;
 }
-li > a {
+a {
   margin: 20px;
-  padding: 10px; 
+  padding: 10px;
   background-color: #2E8B57;
   border-radius: 30px;
   color: #FFFFFF;
   text-decoration: none;
-  text-shadow: 1px 2px #094323;
-}
+  }
